fixed perspective size for overflow

--- a/src/scss/common/_flip-card.scss
+++ b/src/scss/common/_flip-card.scss
@@ -1,6 +1,6 @@
 .flip-card-outer {
     background-color: transparent;
-    perspective: 1000px;
+    perspective: 3000px;
     .flip-card-inner {
         height: 100%;
         position: relative;
